<resources>
    <string name="app_name">Delivery Service</string>
    <string name="title_activity_main_page">MainPageActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="create_offer">Оформить заказ</string>
    <string name="name_input">Наименование</string>
    <string name="length_input">Длина</string>
    <string name="width_input">Ширина</string>
    <string name="height_input">Высота</string>
    <string name="weight_input">Вес</string>
    <string name="add_item">Добавить</string>
    <string name="current_offers">Текущие заказы</string>
    <string name="completed">Выполнены</string>
    <string name="in_processing">Обрабатываются</string>
    <string name="in_progress">Доставляются</string>

    <string name="select_start_point">Выберите точку отправления</string>
    <string name="start_point">Точка отправления</string>
    <string name="select_end_point">Выберите точку доставки</string>
    <string name="end_point">Точка доставки</string>

    <!--Registration page-->
    <string name="registration_welcome">Добро пожаловать!</string>
    <string name="registration_intro_description">Зарегистрируйтесь, чтобы воспользоваться приложением</string>
    <string name="phone_number">Номер телефона</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="registration_button">Зарегистрироваться</string>
    <string name="switch_to_login_button">Уже имеете аккаунт? Авторизуйтесь</string>

    <!--Login page-->
    <string name="login_welcome">Привет, рады снова видеть!</string>
    <string name="login_intro_description">Авторизуйтесь, чтобы продолжить</string>
    <string name="login_button">Авторизоваться</string>
    <string name="switch_to_registration_button">Новый пользователь? Зарегистрируйтесь</string>
    <string name="login_send_code">Отправить код</string>

    <string name="new_offers">Новые заказы</string>
</resources>