<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_progress"
        style="@style/offer_status"
        android:layout_marginTop="10dp"/>
    <ListView
        android:id="@+id/in_progress_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_processing"
        style="@style/offer_status"
        android:layout_marginTop="20dp"/>
    <ListView
        android:id="@+id/in_processing_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/completed"
        style="@style/offer_status"
        android:layout_marginTop="20dp"/>
    <ListView
        android:id="@+id/completed_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>